# Plastic_Memories

./: .gitignore  README.md  pyproject.toml  requirements.txt  sitecustomize.py
.github/workflows/: tests.yml
PLASTIC_tests-GUI/: dome_GUI.py
clients/python/: README.md
clients/python/plastic_memories_client/: __init__.py  client.py  errors.py  models.py  retry.py  ws.py
docs/: requests.http
examples/: client_sdk_demo.py  requests.http
personas/persona_1/: persona.md  preferences.json  rules.md
plastic_memories/: __init__.py  api.py  auth.py  config.py  context.py  db.py  http.py  logging.py  migrations.py  schemas.py  templates.py  utils.py
plastic_memories/ext/: interfaces.py  registry.py
plastic_memories/ext/backends/: sqlite.py
plastic_memories/ext/events/: noop.py  ws.py
plastic_memories/ext/judge/: rules.py
plastic_memories/ext/profile/: markdown.py
plastic_memories/ext/recall/: keyword.py
tests/: conftest.py  test_api.py  test_auth_isolation.py  test_conflict_resolution.py  test_consolidation_flow.py  test_docs_examples_contract.py  test_error_envelope_contract.py  test_expires_at_filter.py  test_forget_vs_revoke.py  test_fts_consistency.py  test_fts_fallback.py  test_goals.py  test_migration_basic.py  test_multi_tenant_isolation.py  test_noise_does_not_mutate_slots.py  test_persona_template.py  test_read_isolation.py  test_requests_http_static_contract.py  test_slots_profile.py  test_templates.py
tests/client_contract/: test_client_contract.py
tests/contract/: test_judge_contract.py  test_recall_contract.py  test_storage_contract.py
(+1 files in other folders)
